tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_int32_1D_tensor_with_float16_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear int32 1D tensor with float16 1D scale, trtx
 dequantizeLinear :: dequantizeLinear int32 1D tensor with float16 1D scale: index 0: actual=0 expected=-22400 ulp=30072 tolerance=16
  inputs: dequantizeLinearInput: [12345, 65504]; dequantizeLinearScale: [1.1201171875, 0.280029296875] (constant); dequantizeLinearZeroPoint: [32345, 0] (constant)
  expected dequantizeLinearOutput: [-22400, 18336]
  actual dequantizeLinearOutput: [0, 0]
  expected dequantizeLinearOutput full nd:
(shape [2])
[-22400, 18336]
  actual dequantizeLinearOutput full nd:
(shape [2])
[0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i32[2];
  }

  consts {
    operand_1: f16[2] @bytes([123, 60, 123, 52]);
    operand_2: i32[2] @bytes([89, 126, 0, 0, 0, 0, 0, 0]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
