tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_int32_1D_tensor_with_float32_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear int32 1D tensor with float32 1D scale",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    dequantizeLinearInput: i32[2];\n  }\n\n  consts {\n    operand_1: i32[2] @bytes([89, 126, 0, 0, 78, 176, 218, 255]);\n    operand_2: f32[2] @bytes([42, 101, 143, 63, 43, 101, 143, 62]);\n  }\n\n  nodes {\n    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_2, operand_1, label=\"\");\n  }\n\n  outputs { dequantizeLinearOutput; }\n}\n",
        ),
    },
)
