tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_int4_1D_tensor_of_odd_size_with_float16_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear int4 1D tensor of odd size with float16 1D scale",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    dequantizeLinearInput: i4[3];\n  }\n\n  consts {\n    operand_0: f16[1] @bytes([123, 60]);\n    operand_2: i4[1] @bytes([208]);\n  }\n\n  nodes {\n    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_0, operand_2, label=\"\");\n  }\n\n  outputs { dequantizeLinearOutput; }\n}\n",
        ),
    },
)
